sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:14: error: value =! is not a member of Int
	} while (i=!getNombreValeurs()-1)
                  ^