sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	var i=0
	do {	if (i==0) {
		i=i+1
		} else {
			if (getValeur(i)>getValeur(i+1)) {
				echange(i,i+1)
				i=i-1
				} else {
					i=i+1
				}	
		}
	} while (i=!getNombreValeurs()-1)
}
